clusters/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restart-practice-service2
spec:
  selector:
    app: restart-practice2
  ports:
    - protocol: TCP
      port: 80     # Exposed service port
      targetPort: 3000  # Container's port
  type: LoadBalancer  # Use NodePort if you don't have a cloud provider
