clusters/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practice-ingress
  namespace: anuj   # or your relevant namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: predictyourday.xyz  # or use the IP temporarily if domain isn't mapped yet
      http:
        paths:
          - path: /kk
            pathType: Prefix
            backend:
              service:
                name: restart-practice-service
                port:
                  number: 80
